--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-transformers==4.44.0
-huggingface_hub==0.24.5
+transformers==4.49.0
+huggingface_hub==0.29.0
 nltk==3.8.1
-gradio==4.36.1
+gradio==5.16.2
 pyvis==0.3.2
 evaluate==0.4.2
 python-dotenv==1.0.1
+trl==0.15.1
+peft==0.5.0
