--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ pyvis==0.3.2
 evaluate==0.4.2
 python-dotenv==1.0.1
 trl==0.15.1
-peft==0.5.0
+git+https://github.com/huggingface/peft.git
+bitsandbytes==0.43.3
